--- a/Medportal/frontend/src/components/css/Navbar.css
+++ b/Medportal/frontend/src/components/css/Navbar.css
@@ -1,15 +1,10 @@
-.navbar-expand-lg .navbar-nav .nav-link:hover{
-    color: #eecf1e;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link.active::after{
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-    width: 100%;
-    height: 2px;
-}
-
-.navbar-expand-lg {
-    background-color: #4180b4;
-}
+.nav-scroller .nav {
+    display: flex;
+    flex-wrap: nowrap;
+    padding-bottom: 1rem;
+    margin-top: -1px;
+    overflow-x: auto;
+    text-align: center;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+  }
