--- a/Medportal/frontend/src/components/css/MRDoctor.css
+++ b/Medportal/frontend/src/components/css/MRDoctor.css
@@ -1,26 +1,6 @@
-.navbar-expand-lg .navbar-nav .nav-link:hover{
-    color: #eecf1e;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link.active{
-    color: #eecf1e;
-}
-
-.navbar-expand-lg .navbar-nav .nav-link.active::after{
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-    width: 100%;
-    height: 2px;
-}
-
-.navbar-expand-lg {
-    background-color: #2C9EC2;
-}
-
 .table .left-table-col {
-    background-color: #5FBDBD;
-    color: #ffffff;
+    background-color: #DEE4E7;
+    color: #000000;
 }
 
 .medical-records-page-title {
@@ -28,6 +8,5 @@
 }
 
 .col-2 .btn {
-    background-color: #5FBDBD;
-    color: #ffffff;
+    color: #000000;
 }
